Prevent new composer from overflowing from non-breakable text

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -37,6 +37,8 @@ limitations under the License.
     }
 
     .mx_MessageComposer_row {
+        /* This forces the composer to wrap its content, even if it has no word boundaries. Fixes #22507 */
+        overflow: hidden;
         grid-area: composer;
     }
 
